add crossref label resolver - add URLUtil with up to date functions for URL handling